--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,9 +6,9 @@ on:
       - master
 
 jobs:
-  build-n-publish:
+  build:
     name: Build and publish Python 🐍 distributions 📦 to PyPI
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
     - name: Set up Python 3.10
